apps/kyrion/coder-prom.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: coder-prom
  namespace: coder
  labels:
    app.kubernetes.io/name: coder
spec:
  clusterIP: None
  ports:
    - name: prometheus-http
      port: 2112
      protocol: TCP
      targetPort: 2112
  selector:
    app.kubernetes.io/instance: coder-coder
    app.kubernetes.io/name: coder
  type: ClusterIP
