apps/kyrion/web-public.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: default
spec:
  type: ExternalName
  externalName: overseerr.arkham.docker.local
---
apiVersion: v1
kind: Service
metadata:
  name: raiplaysoundrss
  namespace: default
spec:
  type: ExternalName
  externalName: rss.arkham.docker.local
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-public
  namespace: default

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.${DOMAIN}`)
      kind: Rule
      services:
        - name: overseerr
          port: 5055
    - match: Host(`rss.${DOMAIN}`)
      kind: Rule
      services:
        - name: raiplaysoundrss
          port: 3000
  tls:
    secretName: tls-web-public-dns
